add cron expressions, update to OpenJDK 11, gradle 5.6